adaptive fonts; adaptive layout

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,13 +5,13 @@
             <span class="sigma-font">ΣΙΓΜΑ</span><br>
         </h1>
         <span class="sigma-font lower-line">вокальное место</span>
-        <p>Раскройте свой вокальный потенциал с помощью индивидуальных занятий по вокалу<br>с опытным профессионалом.
+        <p>Раскройте свой вокальный потенциал с помощью индивидуальных занятий по вокалу с опытным профессионалом.
         </p>
         <button mat-button mat-raised-button (click)="openForm()">Пeрвоe занятие бeсплатнo!</button>
     </div>
 
     <img class="w-h-100 cover-img"
-        src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1"
+        src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_S_sing2_blur_edgoym.png"
         alt="Tutor in action" loading="lazy">
 
 </div>
