--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -21,11 +21,11 @@
             <div class="flex-col gallery-text__title andika-bold">
                 <h3>Студия <span class="sigma-font">ΣΙΓΜΑ</span></h3>
             </div>
-            <span class="gallery-text__description">
+            <span class="w-100 gallery-text__description">
                 Настрой и творческая атмосфера играют ключевую роль в обучении. Я уделяю особое внимание тому, чтобы
                 создавать в студии комфортную среду для продуктивных занятий и вашего удовольствия.
             </span>
-            <ul class="flex-col gallery-text__list">
+            <ul class="flex-col w-100 gallery-text__list">
                 <li class="gallery-text__item">новое профессиональное оборудование</li>
                 <li class="gallery-text__item">пространство с разделением на учебную зону и уголок для отдыха</li>
                 <li class="gallery-text__item">интерьер, создающий уют и стимулирующий творческую активность</li>
@@ -71,7 +71,6 @@
                             <img [src]="slide.source.logo" [alt]="slide.source.name" loading="lazy" class="source-logo">
                         </div>
                         <mat-divider></mat-divider>
-                        <!-- roboto-font ? -->
                         <div class="reviews-content">
                             <span>{{ slide.contentLong }}</span>
                         </div>
@@ -100,12 +99,12 @@
             </div>
         </div>
 
-        <span class="gallery-text__description">
+        <span class="w-100 gallery-text__description">
             Настрой и творческая атмосфера играют ключевую роль в обучении. Я уделяю особое внимание тому, чтобы
             создавать в студии комфортную среду для продуктивных занятий и вашего удовольствия.
         </span>
 
-        <ul class="gallery-text__list">
+        <ul class="w-100 gallery-text__list">
             <li class="gallery-text__item">новое профессиональное оборудование</li>
             <li class="gallery-text__item">пространство с разделением на учебную зону и уголок для отдыха</li>
             <li class="gallery-text__item">интерьер, создающий уют и стимулирующий творческую активность</li>
