--- a/src/app/components/classes/classes.component.scss
+++ b/src/app/components/classes/classes.component.scss
@@ -29,7 +29,7 @@
 
     &__title {
         margin: 0 0 15px 0;
-        font-size: 28px;
+        font-size: calc(26px + 0.2vw);
         font-weight: 600;
         line-height: 30px;
     }
@@ -59,7 +59,7 @@
 // }
 
 .sigma-font {
-    font-size: 32px;
+    font-size: calc(30px + 0.2vw);
 }
 
 // Aligning cards based on their position in the grid
@@ -74,7 +74,6 @@
 }
 
 .card {
-    // min-height: 250px;
     background-color: var(--light-color);
     box-shadow: 0 0 4px var(--dark-alt-color);
     border-radius: 4px;
@@ -95,7 +94,7 @@
 
     &__header {
         margin-bottom: 8px;
-        font-size: 22px;
+        font-size: calc(20px + 0.1vw);
         font-weight: 600;
     }
 
@@ -106,7 +105,7 @@
     }
 
     &__content {
-        font-size: calc(10px + 0.25vw);
+        font-size: calc(12px + 0.1vw);
         color: var(--dark-alt-color);
         text-align: justify;
     }
@@ -138,7 +137,7 @@
 
     &__first {
         font-weight: 600;
-        font-size: 22px;
+        font-size: calc(20px + 0.1vw);
         text-align: center;
     }
 
@@ -149,7 +148,7 @@
         max-height: unset;
         margin: 15px 0;
         background: linear-gradient(70deg, var(--light-brand-color), var(--light-alt-color) 110%);
-        color: #fff;
+        color: #fff !important;
         font-size: 22px;
         box-shadow: 0 0 8px var(--alt-color);
 
@@ -159,7 +158,7 @@
     }
 
     &__list {
-        font-size: 20px;
+        font-size: calc(18px + 0.2vw);
         text-align: center;
         margin-bottom: 0;
     }
@@ -170,11 +169,11 @@
 
         td {
             padding: 8px 0;
-            font-size: 18px;
+            font-size: calc(16px + 0.2vw);
             border-bottom: 1px solid var(--dark-alt-color);
 
             span {
-                font-size: 13px;
+                font-size: calc(10px + 0.2vw);
             }
 
             &:first-child {
@@ -239,7 +238,12 @@
 
         &__title {
             margin-bottom: 20px;
+            font-size: 28px;
         }
+    }
+
+    .sigma-font {
+        font-size: 32px;
     }
 
     .card {
@@ -254,6 +258,27 @@
 
         &__content {
             font-size: 18px;
+        }
+    }
+
+    .price {
+        &__first {
+            font-size: 22px;
+        }
+
+        &__list {
+            font-size: 20px;
+        }
+
+        &__table {
+            td {
+
+                font-size: 18px;
+            }
+
+            span {
+                font-size: 13px;
+            }
         }
     }
 }
