--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,5 @@
 .home-content {
+    max-width: 800px;
     padding: 20px;
     text-align: center;
     background: rgba(0, 0, 0, 0.5);
@@ -10,7 +11,7 @@
     }
 
     .lower-line {
-        font-size: 20px;
+        font-size: 22px;
         line-height: 16px;
     }
 
@@ -20,7 +21,7 @@
     }
 
     p {
-        font-size: 20px;
+        font-size: 22px;
         margin-bottom: 10px;
     }
 
@@ -31,7 +32,7 @@
         max-height: unset;
         margin: 15px 0;
         background: linear-gradient(70deg, var(--light-brand-color), var(--light-alt-color) 110%);
-        color: #fff;
+        color: #fff !important;
         font-size: 22px;
         box-shadow: 0 0 8px var(--alt-color);
 
