--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -30,20 +30,21 @@
         margin: 0;
         padding: 0 20px;
         text-align: center;
-        font-size: 24px;
+        font-size: calc(22px + 0.2vw);
+
     }
 
     &__unvrs {
         padding: 0 10px;
         text-align: center;
-        font-size: 20px;
+        font-size: calc(18px + 0.2vw);
     }
 
     &__list {
         margin: 0;
         padding: 0;
-        font-size: 18px;
-        gap: 6px;
+        font-size: calc(16px + 0.2vw);
+        gap: 10px;
 
         li {
             text-align: start;
@@ -74,7 +75,7 @@
 }
 
 .name {
-    font-size: 28px;
+    font-size: calc(26px + 0.25vw);
     height: unset;
 }
 
@@ -82,23 +83,23 @@
     text-align: center;
     color: var(--dark-alt-color);
     font-style: italic;
-    font-size: 17px;
+    font-size: calc(16px + 0.2vw);
 }
 
 .background {
-    max-width: 500px;
+    max-width: 600px;
     min-width: 250px;
     margin: 0 20px;
     padding: 10px 0;
-    gap: 6px;
+    gap: 12px;
     background: #ddeec4;
     box-shadow: 0 0 4px var(--dark-alt-color);
     border-radius: 4px;
-    font-size: 18px;
+    font-size: calc(16px + 0.2vw);
 }
 
 .sigma-font {
-    font-size: 20px;
+    font-size: calc(18px + 0.2vw);
 }
 
 .right-col {
@@ -182,9 +183,26 @@ li {
     .background {
         min-width: none;
         margin-bottom: 4px;
+        font-size: 18px;
+    }
+
+    .sigma-font {
+        font-size: 20px;
     }
 
     .education {
+        &__title {
+            font-size: 24px;
+        }
+
+        &__unvrs {
+            font-size: 20px;
+        }
+
+        &__list {
+            font-size: 18px;
+        }
+
         &__text {
             max-width: 350px;
         }
@@ -236,10 +254,12 @@ li {
 
         .name {
             margin-left: 80px;
+            font-size: 28px;
         }
 
         .subtitle {
             margin-left: 80px;
+            font-size: 17px;
         }
     }
 }
