created: UserPage, AdminConsole, Login components; started linking with Firebase

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -57,9 +57,9 @@
             <button id="action-button" mat-button mat-raised-button class="action-btn" (click)="openForm()">
                 Записаться
             </button>
-            <!-- <button mat-icon-button>
-            Аккаунт
-        </button> -->
+            <button mat-icon-button (click)="openLogin()">
+                Аккаунт
+            </button>
         </div>
 
         <!-- Links to the social media -->
