--- a/src/app/components/privacy-policy/privacy-policy.component.html
+++ b/src/app/components/privacy-policy/privacy-policy.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col center-row privacy-terms-wrapper">
+<div class="flex-col center-row internal-page-wrapper">
     <h1>Политика в отношении обработки персональных данных</h1>
     <p>
         Приветствую на странице с описанием порядка обработки ваших персональных данных в соответствии с требованиями
