--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,6 +5,7 @@
     --shaded-brand-color: #526931;
     --dark-brand-color: #3F581B;
 
+    --bright-alt-color: #d7d695;
     --light-alt-color: #bfad51;
     --alt-color: #BF7651;
     --shaded-alt-color: #964D28;
