--- a/src/app/components/privacy-policy/privacy-policy.component.scss
+++ b/src/app/components/privacy-policy/privacy-policy.component.scss
@@ -1,10 +1,10 @@
-.privacy-terms-wrapper {
+.internal-page-wrapper {
     padding: 80px 5%;
     max-width: 800px;
     margin: 0 auto;
 
     h1 {
-        margin-top: 40px;
+        margin-top: 20px;
         font-size: 36px;
         margin-bottom: 16px;
     }
