--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -14,9 +14,9 @@ h2 {
     margin: 12px 0;
 }
 
-.close {
-    color: #000;
-    z-index: 30;
+.utility-btn {
+    // color: #000;
+    // z-index: 30;
     cursor: pointer;
 
     mat-icon {
