--- a/src/styles/buttons/inp-button.scss
+++ b/src/styles/buttons/inp-button.scss
@@ -22,41 +22,36 @@
     }
 }
 
-.mat-mdc-stroked-button {
-    border: 1px solid #cad7ed;
-    color: #8098bf;
-    background-color: transparent;
+// .mat-mdc-stroked-button {
+//     border: 1px solid #cad7ed;
+//     color: #8098bf;
+//     background-color: transparent;
 
-    &.mat-button-disabled {
-        border-color: rgba(0, 0, 0, 0.26);
-    }
+//     &.mat-button-disabled {
+//         border-color: rgba(0, 0, 0, 0.26);
+//     }
 
-    &:hover:not(.mat-button-disabled) {
-        background-color: #f8fafe;
-        color: var(--primary-color);
-    }
-}
+//     &:hover:not(.mat-button-disabled) {
+//         background-color: #f8fafe;
+//         color: var(--primary-color);
+//     }
+// }
 
-.mat-mdc-stroked-button.mat-primary:not(.mat-button-disabled) {
-    border-color: #cad7ed;
-    color: #8098bf;
-}
+// .mat-mdc-stroked-button.mat-primary:not(.mat-button-disabled) {
+//     border-color: #cad7ed;
+//     color: #8098bf;
+// }
 
 .mat-mdc-icon-button {
-    border: 1px solid #cad7ed;
-    color: #8098bf;
-    background-color: transparent;
-
-    padding: 4px;
-    height: 40px;
-    min-width: unset;
-    width: auto;
+    height: inherit;
+    background-color: var(--brand-color);
+    color: var(--light-color);
 
     .mat-icon {
-        font-size: 21px;
-        width: 21px;
-        height: 21px;
-        line-height: 21px;
+        font-size: 36px;
+        width: 36px;
+        height: 34px;
+        line-height: 36px;
         color: var(--primary-color);
     }
 
@@ -65,8 +60,7 @@
     }
 
     &:hover:not(.mat-button-disabled) {
-        background-color: #f8fafe;
-        color: var(--primary-color);
+        background-color: var(--shaded-brand-color) !important;
     }
 }
 
@@ -97,16 +91,16 @@
         box-shadow: none;
     }
 
-    &.secondary {
-        background-color: #fff;
-        border: 1px solid #CAD7ED;
-        color: #8098BF;
+    // &.secondary {
+    //     background-color: #fff;
+    //     border: 1px solid #CAD7ED;
+    //     color: #8098BF;
 
-        &:hover {
-            background: #2771ee;
-            color: #fff;
-        }
-    }
+    //     &:hover {
+    //         background: #2771ee;
+    //         color: #fff;
+    //     }
+    // }
 
     &.active {
         transform: translateY(-10px);
