--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -1,7 +1,7 @@
 <div class="flex-col newclass-form">
     <div class="flex-row center-row form-header">
         <h2>Новое занятие</h2>
-        <div class="close" (click)="closeDialog()">
+        <div class="utility-btn" (click)="closeDialog()">
             <mat-icon>close</mat-icon>
         </div>
     </div>
