--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -13,9 +13,9 @@
     </div>
 
     <!-- Divider -->
-    <mat-divider></mat-divider>
+    <mat-divider class="user-info__divider"></mat-divider>
 
-    <app-admin-console *ngIf="user.isadmin"></app-admin-console>
+    <!-- <app-admin-console *ngIf="user.isadmin"></app-admin-console> -->
 
     <!-- admin & user section -->
     <div class="flex-col w-100 content-wrapper">
@@ -60,9 +60,31 @@
         </div>
 
         <!-- Classes signed up for -->
-        <div class="flex-row center-row my-classes">
+        <div class="flex-row my-classes">
             <p><strong>Мои занятия:</strong></p>
-            <div class="flex-col center-all flex-grow my-classes__list">[Plug for class logic]</div>
+            <div class="flex-col center-all flex-grow my-classes__list">
+
+                <!-- Loaded classes list - later add filter by user -->
+                <div *ngFor="let class of classes()" class="w-100 my-classes__item">
+                    <div class="utility-btn utility-btn_details" (click)="editClass()">
+                        <mat-icon>edit</mat-icon>
+                    </div>
+                    <p [ngClass]="{
+                        'my-classes__status_confirmed': class.status === 'confirmed',
+                        'my-classes__status_cancelled': class.status === 'cancelled',
+                        'my-classes__status_pending': class.status === 'pending',
+                        'my-classes__status_executed': class.status === 'executed'
+                    }" class="my-classes__status">
+                        Status: {{ class.status }}
+                    </p>
+                    <mat-divider></mat-divider>
+                    <div class="flex-row my-classes__time">
+                        <p>Date: {{ class.startdate | date:'dd.MM.yyyy' }}</p>
+                        <p>Time: {{ class.startdate | date:'HH:mm' }} - {{ class.enddate | date:'HH:mm' }}</p>
+                    </div>
+                </div>
+
+            </div>
             <button mat-raised-button (click)="refreshClasses()">обновить</button>
         </div>
     </div>
