--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -28,7 +28,7 @@
             <!-- Email (Top-left sector) -->
             <div class="flex-row center-row contact-info email">
                 <label class="label">e-mail:</label>
-                <input class="input" type="text" [(ngModel)]="user.mail" [readonly]="!isEditing"
+                <input class="input" type="text" [(ngModel)]="user.email" [readonly]="!isEditing"
                     [ngClass]="{ 'editable': isEditing }" />
             </div>
             <!-- Empty (Top-right sector) -->
